# BucketsHunter

./: .gitignore  LICENSE  README.md  buckets-hunter.py  j.json  requirements.txt  setup.cfg
BucketsHunter/: __main__.py  buckets_hunter.py
BucketsHunter/conf/: __init__.py  scan_config.py
BucketsHunter/data/: buckets_wordlist.txt
BucketsHunter/modules/aws/: aws_scanner.py
BucketsHunter/modules/azure/: azure_scanner.py  regions.py
BucketsHunter/modules/gcp/: gcp_scanner.py
BucketsHunter/utils/: buckets_hunter_utils.py  dns.py  hunter_utils.py  notify.py
CloudHunter/: __main__.py  buckets_permutations.py  cloud_hunter.py  utils.py
buckets_hunter/: __main__.py
buckets_hunter/conf/: scan_config.py
buckets_hunter/modules/aws/: aws_scanner.py
buckets_hunter/modules/azure/: azure_scanner.py
buckets_hunter/modules/gcp/: gcp_scanner.py
buckets_hunter/utils/: hunter_utils.py  notify.py
data/: fuzz_wordlist.txt
modules/aws/: aws_scanner.py
modules/azure/: azure_scanner.py
