[metadata]
name = BucketsHunter
version = 0.1
author = Daniel Azulay
author_email = serializator@gmail.com
description = Scan for open buckets, their permissions and dump their contents. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/danielazulayy/BucketsHunter
project_urls =
    Bug Tracker = https://github.com/danielazulayy/BucketsHunter
classifiers =
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Security
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = BucketsHunter
python_requires = >=3.6

[options.entry_points]
console_scripts =
    bucketshunter = BucketsHunter.__main__:main